--- a/style.css
+++ b/style.css
@@ -1,103 +1,74 @@
-@media (max-width:600px){}
-#Purchase{
-    border: 5px solid black;
-    padding: 3rem;
-    text-align: center;
-    display: flex;
-    background-color: #e2a8c6;
-    flex-direction: column;
-    align-items: center;
-    font-family:'Times New Roman', Times, serif;
-    block-size: 550px;
-    
-}
-#Purchase:hover{
-    background-color: transparent;
+header{
+    font-size:xxx-large;
+    font-weight: 100px;
+    font-family:monospace;
+    font-display: block;
 }
 
-h1{
-    border:2px solid plum;
+body{  
+     padding: 2rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+     background: radial-gradient(circle,#ff9a9e, #fad0c4);
+    align-items: center;
+    border: solid;
+    border-color: pink;
+
 }
-@media (max-width:600px)
-    section{ 
-        height:100vh
-    }
-    @media (min-width: 1000px)
-        section{
-            height:500vh;
-    }
-    img{ 
-        background: radial-gradient(circle,#ff9a9e, #fad0c4);
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        display: flex;
 
-    }
-    /**Goes All Way to Description**/
-    #Painting{
-        padding: 3rem;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border:2px solid black
-    }
-    h1{
-        background-color:hsl(321, 61%, 73%);
-    }
-    header{
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: larger;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .art-container{
-        display:grid;
-        grid-template-columns: repeat(4,45px);
-        gap:5px;
-        position:relative;
-        border: 20px solid pink;
-        padding: 4rem;
-        background-color:#ffd1ff;
-    }
-    .shape{
-        height:100px;
-        width:100px;
-        position:relative;
-    }
-    .circle{
-        border-radius: 50%;
-        background: radial-gradient(circle,#ff9a9e, #fad0c4);
-    }
-    .square{
-        background: linear-gradient(45deg,#fad0c4, #ffd1ff);
-    }
-   #moon{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 
-    
-   }
-   #aa{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: cursive;
-   }
-   #creator{
-    font-size: small;
-    font-family:cursive;
-   }
-   body{
-    background: linear-gradient(45deg,#fad0c4, #ffd1ff);
-
+#lilyflower{
+    border:solid 35px;
+    border-color:pink;
+    border-radius: 50%;
+    background-color:salmon;
+}
+#Dropmenu{
  
 }
+h1{
+    border:solid;
+    border-color: pink;
+}
+#Shirt1{
+    border:solid 5px;
+}
+#Shirt2{
+    border:solid 5px;
+}
+#Shirt3{
+    border:solid 5px;
+}
+#Shirt4{
+    border:solid 5px;
+}
+#Shirt5{
+    border:solid 5px;
+}
+#Submission{
+    border: 5px solid black;
+    border-width: 100px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:3rem;
+}
+.contact1{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding:4rem;
 
-   
+    body{
+        background: linear-gradient(45deg,#fad0c4, #ffd1ff);
+         
+     
+     } 
+#Hike{
+    border: solid;
+    border-color: black;
+    border-radius: 20%;
+}
